# model-speed-estimator

./: .gitignore  README.md  download_models.sh  pyproject.toml  run.py
entities/: detection.py
models/: __init__.py  abstract_model.py
models/person_detection_0200/: __init__.py  person_detection_0200.py  utils.py
models/yolov4_tiny/: __init__.py  utils.py  yolov4_tiny.py
utils/: cli_utils.py  input_utils.py  output_utils.py
