[tool.poetry]
name = "model-speed-estimator"
version = "0.0.1"
description = "Model inference speed estimator"
authors = ["Dmitrii Sergeichuk <sergeychukdmitry@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
opencv-python = "^4.6.0"
tqdm = "^4.64.0"
numpy = "^1.23.3"
tabulate = "^0.8.10"
ffmpeg-python = "^0.2.0"
openvino = "^2022.3.0"
openvino-dev = "^2022.3.0"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
